add: delete post by id
